@@ -1,5 +1,9 @@
 2007-01-15  Kyle Galloway  <kgallowa@redhat.com>
 
+	* gnu/classpath/jdwp/exception/InvalidFrameException.java: New file.
+
+2007-01-15  Kyle Galloway  <kgallowa@redhat.com>
+
 	* gnu/classpath/jdwp/exception/AbsentInformationException.java: New file.
 
 2007-01-15  Kyle Galloway  <kgallowa@redhat.com>
